[gd_scene load_steps=5 format=3 uid="uid://c0rw4xuddkia"]

[ext_resource type="Script" path="res://UI/Options/options.gd" id="1_1xhk4"]
[ext_resource type="PackedScene" uid="uid://dfl1bip41rv7d" path="res://UI/Options/input_button.tscn" id="1_ierc1"]
[ext_resource type="Texture2D" uid="uid://bjprmkqebp2ao" path="res://UI/Background/MainMenu_BG.png" id="2_u2p1j"]
[ext_resource type="FontFile" uid="uid://2gwjcer5hsby" path="res://Assets/Fonts/FuturexVariationSwish.ttf" id="2_ywhlc"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1xhk4")

[node name="MainMenuBg" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_u2p1j")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 15.0
offset_right = 31.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 585.0
offset_right = 240.0
offset_bottom = 621.0
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 24
text = "Back to Main Menu"
flat = true

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
offset_left = 264.0
offset_top = 103.0
offset_right = 888.0
offset_bottom = 545.0
current_tab = 2

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
offset_bottom = 7.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputButton" parent="TabContainer/Controls/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ierc1")]
layout_mode = 2

[node name="Graphics" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 21.0
offset_right = -255.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphicsContainer" type="VBoxContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="Resolution" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/ScrollContainer/GraphicsContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 24
text = "Set Resolution"

[node name="ResolutionButton" type="OptionButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/ScrollContainer/GraphicsContainer"]
layout_mode = 2
selected = 3
item_count = 5
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1152x648"
popup/item_3/id = 3
popup/item_4/text = "800x600"
popup/item_4/id = 4

[node name="WindowType" type="CheckButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/ScrollContainer/GraphicsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 24
theme_override_constants/check_v_offset = 0

[node name="WindowTypeLabel" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/ScrollContainer/GraphicsContainer/WindowType"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 24
text = "Windowed"

[node name="Audio Settings" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 21.0
offset_right = -215.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio Settings/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioContainer" type="VBoxContainer" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="HBoxMaster" type="HBoxContainer" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MasterLabel" type="Label" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer/HBoxMaster"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 24
text = "Master Volume"

[node name="VolValue" type="Label" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer/HBoxMaster"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_ywhlc")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MasterVol" type="HSlider" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
min_value = -50.0
max_value = 50.0

[node name="MusicWarning" type="Label" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="MusicRecomendation" type="Label" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "The volume recommended is 34%."

[node name="HBoxSFX" type="HBoxContainer" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SfxLabel" type="Label" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer/HBoxSFX"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 24
text = "SFX Volume"

[node name="VolValue" type="Label" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer/HBoxSFX"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_ywhlc")
horizontal_alignment = 2
vertical_alignment = 1

[node name="SfxVol" type="HSlider" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
min_value = -50.0
max_value = 50.0

[node name="SfxWarning" type="Label" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="SfxRecomendation" type="Label" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "The volume recommended is 48%."

[node name="MuteBox" type="CheckBox" parent="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 24
text = "Mute All"

[node name="Reset" type="Button" parent="."]
layout_mode = 2
offset_left = 719.0
offset_top = 502.0
offset_right = 882.0
offset_bottom = 538.0
focus_mode = 0
theme_override_fonts/font = ExtResource("2_ywhlc")
theme_override_font_sizes/font_size = 24
text = "Reset Changes"
flat = true

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="TabContainer/Graphics/MarginContainer/VBoxContainer/ScrollContainer/GraphicsContainer/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="toggled" from="TabContainer/Graphics/MarginContainer/VBoxContainer/ScrollContainer/GraphicsContainer/WindowType" to="." method="_on_window_type_toggled"]
[connection signal="value_changed" from="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer/MasterVol" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer/SfxVol" to="." method="_on_sfx_vol_value_changed"]
[connection signal="toggled" from="TabContainer/Audio Settings/MarginContainer/VBoxContainer/ScrollContainer/AudioContainer/MuteBox" to="." method="_on_mute_box_toggled"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
